--- a/main/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/main/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -1,5 +1,5 @@
 <header>
-    <a href="/jsp/home" class="logo"><img alt="Sadsirko" title="Sadsirko" src="/img/sadsirko.jpg" width="50"
+    <a href="/home" class="logo"><img alt="Sadsirko" title="Sadsirko" src="/img/sadsirko.jpg" width="50"
                                           height="50"></a>
 
 
@@ -16,6 +16,8 @@
                     </c:when>
                 </c:choose>
                 <li class="nav-item"><a class="nav-link" href="/addChannel">Add Channel</a></li>
+                <li class="nav-item"><a class="nav-link" href="/categories">Categories</a></li>
+
             </ul>
         </div>
     </nav>
